# NAO-Modular-Architecture

install/: local_setup.sh  setup.sh
install/integration/lib/integration/: integration_interface
install/integration/share/integration/: package.sh  package.xml
install/manipulation/share/manipulation/: package.sh  package.xml
install/manipulation_interfaces/share/manipulation_interfaces/: package.bash  package.ps1  package.sh
install/manipulation_interfaces/share/manipulation_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  manipulation_interfacesConfig.cmake  (+6 more)
install/nao_qi_ros2_package/lib/nao_qi_ros2_package/: nao_talker
install/nao_qi_ros2_package/share/nao_qi_ros2_package/: package.bash  package.sh  package.xml  package.zsh
install/nao_tasks/lib/nao_tasks/: task_one
install/nao_tasks/share/nao_tasks/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/navigation/share/navigation/: package.sh
install/navigation_interfaces/share/navigation_interfaces/: package.ps1  package.sh
install/perception/share/perception/: package.sh
install/perception_interfaces/share/perception_interfaces/: local_setup.sh  package.dsv  package.ps1  package.sh
install/rest_api/share/rest_api/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/speech/share/speech/: package.sh  package.xml
install/speech_interfaces/share/speech_interfaces/: package.bash  package.dsv  package.ps1  package.sh
install/web_controller/share/web_controller/: package.sh  package.xml
log/: latest_build
ros2_rest_env/: pyvenv.cfg
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/integration/: setup.py
src/integration/integration/: integration_interface.py  task_one.py
src/integration/integration/tasks/: live_conversation.py
src/log/: latest_build
src/manipulation/: package.xml  setup.py
src/manipulation/manipulation/: manipulation_node.py
src/manipulation_interfaces/: CMakeLists.txt  package.xml
src/manipulation_interfaces/srv/: SetMode.srv
src/nao_qi_ros2_package/: setup.cfg  setup.py
src/nao_qi_ros2_package/nao_qi_ros2_package/: nao_talker.py
src/nao_tasks/: setup.cfg  setup.py
src/navigation/: package.xml  setup.py
src/navigation/navigation/: navigation_node.py
src/navigation_interfaces/: CMakeLists.txt  package.xml
src/perception/: package.xml  setup.py
src/perception/perception/: perception_node.py
src/perception_interfaces/: CMakeLists.txt  package.xml
src/perception_interfaces/srv/: DetectObjects.srv
src/rest_api/: setup.cfg  setup.py
src/rest_api/rest_api/: rest_api_node.py
src/speech/: package.xml  setup.py
src/speech/speech/: speech_node.py
src/speech_interfaces/: CMakeLists.txt  package.xml
src/speech_interfaces/srv/: LiveConversation.srv  LiveConversationWithTranscription.srv  RecognizeSpeech.srv  SetVoiceParameters.srv  StartAudioRecording.srv  StartListening.srv  StopAudioRecording.srv  TranscribeAudio.srv
src/web_controller/: setup.py
(+188 files in other folders)
