<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nao_qi_ros2_package</name>
  <version>0.0.1</version>
  <description>ROS2 package to communicate with NAO robot using qi SDK and Python 3</description>
  <maintainer email="f.hernandezt@uniandes.edu.co">fai</maintainer>
  <license>None</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>qi</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
